--- a/src/style/App.css
+++ b/src/style/App.css
@@ -10,6 +10,12 @@
   text-align: right;
 }
 
+.disclaimer {
+  font-size: 16px;
+  text-align: left;
+  margin-top: 50px;
+}
+
 p {
   margin-top: 30px;
   margin-bottom: 30px;
