--- a/src/style/App.css
+++ b/src/style/App.css
@@ -137,4 +137,12 @@ button:focus {
    h1 {
      font-size: 40px;
    }
+
+   .disclaimer {
+     font-size: 14px;
+   }
+
+   p {
+     font-size: 16px;
+   }
 }
