--- a/src/style/App.css
+++ b/src/style/App.css
@@ -13,7 +13,27 @@
 .disclaimer {
   font-size: 16px;
   text-align: left;
-  margin-top: 50px;
+  margin-top: 30px;
+  float: none;
+}
+
+.lefthalf {
+  width: 80%;
+  display: inline;
+  float: left;
+}
+
+.righthalf {
+  width: 20%;
+  margin: 0px;
+  float: left;
+}
+
+.row {
+  margin-bottom: 10px;
+  min-width: 100%;
+  height: 300px;
+  background-color: #bbb;
 }
 
 p {
@@ -40,6 +60,11 @@ a:hover {
   opacity: 0.7;
 }
 
+mark {
+  background-color: #ebebeb;
+  color: black;
+}
+
 .container {
   max-width: 750px;
   padding: 10px;
@@ -50,101 +75,9 @@ a:hover {
   max-width: 750px;
 }
 
-.language {
-  height: 18px;
-  width: 18px;
-  border-radius: 5px;
-  background-color: #ebebeb;
-  opacity: 0.8;
-  margin: 8px;
-  border-color: #545454;
-}
-
-.language:hover {
-  opacity: 1;
-}
-
-.selectedlanguage {
-  height: 18px;
-  width: 18px;
-  max-height: 18px;
-  max-width: 18px;
-  min-height: 18px;
-  min-width: 18px;
-  border-radius: 5px;
-  background-color: #ed783e;
-  opacity: 0.8;
-  margin: 8px;
-  border-color: #545454;
-}
-
-.selectedlanguage:hover {
-  opacity: 1;
-}
-
-.radioLabel {
-  font-size: 20px;
-  font-family: 'Roboto', sans-serif;
-  padding-left: 20px;
-}
-
-.button {
-  display: block;
-  background-color: #bbb;
-}
-
-button {
-  width: 40%;
-  height: 60px;
-  font-size: 24px;
-  border-radius: 0px;
-  border: 1px solid #6b6b6b;
-  opacity: 1;
-  background-color: #ebebeb;
-  font-family: 'Roboto', sans-serif;
-}
-
-button:hover {
-  opacity: 0.9;
-  border: 1px solid #292929;
-}
-
-button:disabled {
-  opacity: 0.65;
-  border: 1px solid #a1a1a1;
-}
-
-button:disabled:hover {
-  opacity: 0.65;
-}
-
-.fnButton {
-  width: 20%;
-  background-color: #ffca75;
-  display: inline-block;
-}
-
-button:focus {
-  outline: none;
-  border: 2px solid #303030;
-}
-
 @media screen and (max-width: 600px) {
-   button {
-     font-size: 15px;
-     line-height: 1;
-   }
-
    .result p {
      font-size: 28px;
-   }
-
-   .language {
-     font-size: 18px;
-   }
-
-   .selectedlanguage {
-     font-size: 18px;
    }
 
    h1 {
@@ -157,10 +90,5 @@ button:focus {
 
    p {
      font-size: 16px;
-   }
-
-   .radioLabel {
-     font-size: 18px;
-     padding-left: 18px;
    }
 }
