--- a/src/style/App.css
+++ b/src/style/App.css
@@ -39,9 +39,9 @@
 p {
   margin-top: 30px;
   margin-bottom: 30px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.5;
 }
 
