--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,13 +1,22 @@
 .result {
-  height: 120px;
+  height: 150px;
   background-color: #bbb;
   width: 100%;
+  padding-top: 5px;
 }
 
 .result p {
   font-size: 40px;
-  margin: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 2px;
+  margin-bottom: 0;
   text-align: right;
+  line-height: 1.2;
+}
+
+.result .smallertext {
+  font-size: 25px;
 }
 
 .disclaimer {
@@ -75,9 +84,15 @@ mark {
   max-width: 750px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 760px) {
    .result p {
-     font-size: 28px;
+     font-size: 25px;
+     line-height: 1.1;
+   }
+
+   .result .smallertext {
+     font-size: 20px;
+     line-height: 1.1;
    }
 
    h1 {
