--- a/src/style/buttons.css
+++ b/src/style/buttons.css
@@ -21,13 +21,8 @@
   min-width: 18px;
   border-radius: 5px;
   background-color: #ed783e;
-  opacity: 0.8;
   margin: 8px;
   border-color: #545454;
-}
-
-.selectedlanguage:hover {
-  opacity: 1;
 }
 
 .radioLabel {
@@ -50,6 +45,7 @@ button {
   opacity: 1;
   background-color: #ebebeb;
   font-family: 'Roboto', sans-serif;
+  touch-action: manipulation;
 }
 
 button:hover {
